# backend-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  _route_check.py  chat_agent.py  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt  simulation_data.json  temp_snippet.txt  test_ws.py
api/: __init__.py  models.py  websocket.py
api/routers/: agriculture.py  audio.py  gardens.py  plants.py
api/services/: __init__.py  monitoring.py
deployment/: Makefile  README.md
irrigation_agent/: __init__.py  agent.py  agriculture_service.py  audio_service.py  config.py  firebase_service.py  genai_utils.py  stt_service.py  tools.py  tools_old.py  tts_service.py  weather_service.py
irrigation_agent/service/: audio_service.py  eleven_agents_service.py  firebase_service.py  image_service.py  stt_service.py  telegram_service.py  tts_service.py  weather_service.py
irrigation_agent/sub_agents/: __init__.py  alert_manager.py  nutrient_analyzer.py  optimization_agent.py  sensor_monitor.py
irrigation_agent/tools/: __init__.py  _base.py  analysis.py  control.py  gardens.py  notifications.py  sensors.py  tools_api.py
irrigation_agent/utils/: __init__.py  genai_utils.py
prompts/: __init__.py  agent_decision.py  garden_advisor.py  garden_chat.py  websocket_chat.py
scripts/: __init__.py  test_firestore_endpoints.py
